tests/NormalTests/paczka1/fuzzy1/78927722.err
Error in line 3: vtMwN1 S524 47,5
Error in line 6: vtMwN1 S482 -1,7
Error in line 5: DvF36gBRNR4 S482 41,9
Error in line 7: X3ZcZ1Go4 S524 97,8
Error in line 11: X3ZcZ1Go4 S482 19,7
Error in line 14: nZWdfp S802 72,3
Error in line 19: DvF36gBRNR4 A657 59,6
Error in line 21: nZWdfp S524 40,8
Error in line 24: nZWdfp S802 23,1
Error in line 29: KRuAS5 S524 60,1
Error in line 20: vtMwN1 S482 0,8
